Fixed extra padding issue on navbar

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -112,6 +112,12 @@ a.btn, .btn-lg, .btn-default{
 
 
 /*Navbar*/
+.nav-container{
+  width:100%;
+  background: $primary-colour;
+  padding:0px;
+}
+
 nav.navbar-default{
   margin:0px;
   background:#000;
